--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Dany
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Public Historian in training whose focus is on videogame preservation.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://scontent.fxds1-1.fna.fbcdn.net/v/t1.0-9/12795343_10156495447090526_2140091982225527718_n.jpg?oh=8f1d5d4355a5e35a63cae0cedbf1c347&oe=5AEF7E6F
 
 #
 # Flags below are optional
