--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Dany
+name: Dany's Digital Hisotry Site
 
 # Short bio or description (displayed in the header)
 description: Public Historian in training whose focus is on videogame preservation.
