--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ avatar: https://scontent.fxds1-1.fna.fbcdn.net/v/t1.0-9/12795343_101564954470905
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: danygebelanger@gmal.com
+  email: danygbelanger@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: 
   instagram:
   linkedin:
   pinterest:
